turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:3: error: '<-' expected but ')' found.
	for (1 to 17)
                    ^Source:9: error: illegal start of simple expression
}
^